--- a/Oppgave 03/css/oppgave03.css
+++ b/Oppgave 03/css/oppgave03.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 img {
   max-width: 100%;
 }
@@ -18,6 +22,7 @@ img {
   font-family: sans-serif;
   font-weight: bold;
   margin: 0px;
+  padding: 10px;
 }
 
 .landListeOutput img {
@@ -28,7 +33,7 @@ img {
   margin: 0px;
 }
 
-#footer p{
+#footer p {
   height: 50px;
   margin-top: 50px;
 }
