--- a/Oppgave 03/css/oppgave03.css
+++ b/Oppgave 03/css/oppgave03.css
@@ -1,13 +1,30 @@
+body{
+  margin: 0px;
+}
 img {
   max-width: 100%;
 }
-
 #container {
   max-width: 1000px;
   display: block;
-  margin:  auto;
-  padding-bottom: 40px;
-  height: 1500px;
+  margin-right: auto;
+  margin-left: auto;
+  height: 1600px;
+  font-family: sans-serif;
+  background-color: rgb(249, 249, 249);
+}
+#headTxt{
+  margin: 0px 0px 10px 0px;
+  padding: 30px 0px 0px 40px;
+  height: 50px;
+  font-size: 40px;
+  color: rgb(24, 28, 26);
+  background-color: rgb(87, 205, 226);
+
+}
+#searchSection{
+
+  margin: 0px;
 }
 
 .landListeOutput {
@@ -15,24 +32,36 @@ img {
   max-width: 50%;
   display: block;
   text-align: left;
-  font-family: sans-serif;
   font-weight: bold;
   margin: 0px;
 }
-
 .landListeOutput img {
   margin-top: 10px;
   margin-bottom: 10px;
 }
 .landListeOutput p {
   margin: 0px;
+  margin-bottom: 5px;
 }
-
-#footer p{
-  height: 50px;
-  margin-top: 50px;
+.btn {
+  background: #3498db;
+  background-image: linear-gradient(top, #3498db, #2980b9);
+  background-image: linear-gradient(to bottom, #3498db, #2980b9);
+  border-radius: 37px;
+  box-shadow: 2px 2px 3px #666666;
+  font-family: Arial;
+  color: #ffffff;
+  font-size: 13px;
+  text-decoration: none;
+  border: none;
+  margin-left: 10px;
 }
-
+.btn:hover {
+  background: #3cb0fd;
+  background-image: linear-gradient(top, #3cb0fd, #3498db);
+  background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
+  text-decoration: none;
+}
 @media (max-width: 1040px) {
   .landListeOutput {
     max-width: 100%;
